[package]
name = "opencore-jsonrpc-rust"
version = "0.1.0"
edition = "2024"
authors = ["Flussen"]
description = "A simple and elegant library for creating JSON-RPC servers that communicate with the TypeScript framework OpenCore via stdin/stdout"
license = "MIT"
repository = "https://github.com/Flussen/opencore-jsonrpc-rust"
homepage = "https://opencorejs.dev"
documentation = "https://opencorejs.dev/docs/decorators/server/binary-service"
readme = "README.md"
keywords = ["jsonrpc", "rpc", "opencore", "fivem", "binary"]
categories = ["network-programming", "encoding"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"